--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,15 @@
     <title>Tailwindcss入門</title>
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline">
-      Hello world!
-    </h1>
+    <header class="bg-blue-400 p-4">
+      <nav class="flex justify-between mx-auto container items-center">
+        <div class="text-4xl">Code.com</div>
+        <div class="space-x-12 font-bold">
+          <a href="" class="hover:text-green-200 transition-all duration-300">ホーム</a>
+          <a href="" class="hover:text-green-200 transition-all duration-300">ブログ</a>
+          <a href="" class="hover:text-green-200 transition-all duration-300">お問い合わせ</a>
+        </div>
+      </nav>
+    </header>
   </body>
 </html>
