背景画像を表示出来るように実装

--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,8 @@
         </div>
       </nav>
     </header>
+    <main>
+      <div class="bg-tutorial-bg min-h-screen bg-cover bg-center object-cover"></div>
+    </main>
   </body>
 </html>
